# StellarDefenders

./: CMakeLists.txt  README.md
Assets/Sprites/ET/: texture.json
Assets/Sprites/EmergencyLight/: texture.json
Source/: AudioSystem.cpp  Camera.cpp  Camera.hpp  Color.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Main.cpp  MainMenu.cpp  MainMenu.h  Math.h  Random.cpp  Random.h  SpatialHashing.cpp  SpatialHashing.h  camera.cpp  camera.hpp  filter_vector.hpp  norm_greater.cpp  norm_greater.hpp  rect_transform.cpp  rect_transform.hpp  sq.hpp
Source/Actors/: Actor.cpp  Actor.h  Alien.cpp  Alien.h  EmergencyLight.cpp  EmergencyLight.h  Laser.cpp  Laser.h  MainMenuActor.cpp  MainMenuActor.h  Ship.cpp  Ship.h  Star.cpp  Star.h
Source/Components/: Component.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawPolygonComponent.cpp  DrawPolygonComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/Scenes/1/: one.cpp  one.hpp
Source/Scenes/2/: two.cpp  two.hpp
Source/Scenes/3/: three.cpp  three.hpp
Source/Scenes/ShipMenu/: ShipMenu.cpp  ShipMenu.hpp
Source/Scenes/Simulation/: collidable_sphere.cpp  collidable_sphere.hpp  fragment.cpp  fragment.hpp  kamikaze.cpp  kamikaze.hpp  kinematic_body.cpp  kinematic_body.hpp  particle.cpp  particle.hpp  planet.cpp  planet.hpp  simulation.cpp  simulation.hpp  target.cpp  target.hpp  virtual_positioning.cpp  virtual_positioning.hpp
Source/UIElements/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIFont.cpp  UIFont.h  UIImage.cpp  UIImage.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h
